# poly-graphiz-2

./: .gitignore  Cargo.toml  build.rs
models/: cat.mtl  dragon2.mtl  dragon3.mtl  dragon4.mtl  floortest.mtl  gd1.mtl  girl1.mtl  girl2.mtl  girl3.mtl  gundam1.mtl  minidragon.mtl  model.mtl  tree1.mtl  tree2.mtl  untitled.mtl
res/: big_squish.glb  cube.glb  cube_companion.glb  dragon5.mtl  dragon6.mtl  girl2.glb  girl3.mtl  girl4.mtl  hakos.glb  plane1.glb  plane2.glb  planee.glb  planeee.glb  skybox1.glb  ter2.glb
res/fbx1/source/ReleaseTex/: Kobold_Release.fbx
src/: lib.rs  light.wgsl  main.rs  model.rs  resources.rs  resources_backup.txt  shader.wgsl  texture.rs
