[package]
name = "wgpu_tutorial1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
env_logger = "0.11"
pretty_env_logger = "0.5.0"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.14", features = [ "derive" ] }
anyhow = "1.0"
nalgebra = "0.32.4"
rayon = "1.9.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
